--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 psycopg2-binary = "*"
 django-cors-headers = "*"
 whitenoise = "*"
+svglib = "*"
 
 [requires]
 python_version = "3.8"
