--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-sharp": "^2.4.3",
-    "js-cookie": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -21,7 +20,12 @@
     "react-native-base64": "^0.0.2"
   },
   "devDependencies": {
+    "babel-jest": "^25.3.0",
+    "babel-preset-gatsby": "^0.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^25.3.0",
     "prettier": "^1.19.1",
+    "react-test-renderer": "^16.13.1",
     "watch": "^1.0.2"
   },
   "keywords": [
@@ -35,7 +39,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
