--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/randomrails-$BRANCH_NAME:$SHORT_SHA', 'randomrails']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/randomrails-$BRANCH_NAME:$SHORT_SHA', '.']
 - name: 'gcr.io/cloud-builders/docker'
   args: ['push', 'gcr.io/$PROJECT_ID/randomrails-$BRANCH_NAME:$SHORT_SHA']
 - name: 'gcr.io/cloud-builders/gcloud'
