--- a/backend/crayonrails/crayonrails/.env.local
+++ b/backend/crayonrails/crayonrails/.env.local
@@ -1,6 +1,7 @@
 SECRET_KEY="mr)^gfhc(s0-%_kkxfo_z(@t_!0a^@=dq$s43phxmzfw#0m3^9"
 DEBUG=True
 DATABASE_HOST=
+DATABASE_PORT=
 DATABASE_PASSWORD=
 DATABASE_NAME=db.sqlite3
 DATABASE_USER=
