fix static files build

--- a/backend/crayonrails/.env.local
+++ b/backend/crayonrails/.env.local
@@ -8,3 +8,4 @@ DATABASE_USER=
 DATABASE_ENGINE=django.db.backends.sqlite3
 CSRF_COOKIE_SECURE=False
 SESSION_COOKIE_SECURE=False
+PRODUCTION_STATICFILES=False
