--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -12,8 +12,10 @@ whitenoise = "*"
 svglib = "*"
 gunicorn = "*"
 python-dotenv = "*"
-mysqlclient = {version = "*", sys_platform = "== 'linux'"}
+mysqlclient = {version = "*",sys_platform = "== 'linux'"}
 networkx = "*"
+scipy = "*"
+shapely = "*"
 
 [requires]
 python_version = "3.8"
