--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /backend/crayonrails/db.sqlite3
 /backend/crayonrails/game/static
 /backend/crayonrails/staticfiles
-/.idea/
 
+#python generated files
 **/__pycache__/
+
+#IDE configuration
+/.idea/
+.vscode/
